# scan-watch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helpers.hh  ocr.cc  scan_watch.in  send-file.cc  sftp-upload-server.cc
